--- a/PBL/Chatbot.html
+++ b/PBL/Chatbot.html
@@ -3,7 +3,7 @@
 <head>
     <title>KJSIT Chatbot</title>
 
-    <link rel="stylesheet" href="style.css"
+    <link rel="stylesheet" href="css/Chatbot.css"
 </head>
 <body>
     <div id="chat-icon">💬</div>
@@ -20,6 +20,6 @@
             <button id="send-btn" onclick="sendMessage()">Send</button>
         </div>
     </div>
-   <script src="/script.js"></script>
+   <script src="js/Chatbot.js"></script>
 </body>
 </html> 
